[project]
name = "ipmipwner"
version = "1.0.3"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
upload_to_pypi = false
build_command = ""
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "refactor", "docs", "chore", "sec"]
minor_tags = ["feat"]
patch_tags = ["fix", "sec", "refactor", "docs", "chore"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote.token]
env = "GH_TOKEN"
